--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 #MySQL \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC774\uB984?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/[name]]?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=\uBE44\uBC00\uBC88\uD638
+spring.datasource.password=[password]
 
 #true \uC124\uC815 \uC2DC jpa \uCFFC\uB9AC\uBB38 \uD655\uC778 \uAC00\uB2A5
 spring.jpa.show-sql=true
