--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,17 @@ spring.jpa.hibernate.ddl-auto=update
 
 #MySQL \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/[name]]?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/testsql?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=[password]
+spring.datasource.password=Qsef1324!
 
 #true \uC124\uC815 \uC2DC jpa \uCFFC\uB9AC\uBB38 \uD655\uC778 \uAC00\uB2A5
 spring.jpa.show-sql=true
 
 # JPA\uC758 \uAD6C\uD604\uCCB4\uC778 Hibernate\uAC00 \uB3D9\uC791\uD558\uBA74\uC11C \uBC1C\uC0DD\uD55C SQL\uC758 \uAC00\uB3C5\uC131\uC744 \uB192\uC5EC\uC90C
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
